build/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.openshift.io/connects-to: postgresql-db
    app.quarkus/id: "42"
    foo: bar
    app.quarkus.io/commit-id: cd443b1937bab588544fe4121502a00eb8b52df5
    app.quarkus.io/build-timestamp: 2022-08-01 - 04:39:33 +0000
  labels:
    app.kubernetes.io/name: atomic-fruit-service
    app.kubernetes.io/part-of: fruit-service-app
    app.kubernetes.io/version: 1.0-SNAPSHOT
    department: fruity-dept
    app.openshift.io/runtime: quarkus
  name: atomic-fruit-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: atomic-fruit-service
    app.kubernetes.io/part-of: fruit-service-app
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.openshift.io/connects-to: postgresql-db
    app.quarkus/id: "42"
    foo: bar
    app.quarkus.io/commit-id: cd443b1937bab588544fe4121502a00eb8b52df5
    app.quarkus.io/build-timestamp: 2022-08-01 - 04:39:33 +0000
  labels:
    app.kubernetes.io/name: atomic-fruit-service
    app.kubernetes.io/part-of: fruit-service-app
    app.kubernetes.io/version: 1.0-SNAPSHOT
    department: fruity-dept
    app.openshift.io/runtime: quarkus
  name: atomic-fruit-service
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: atomic-fruit-service
    app.kubernetes.io/part-of: fruit-service-app
    app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.openshift.io/connects-to: postgresql-db
        app.quarkus/id: "42"
        foo: bar
        app.quarkus.io/commit-id: cd443b1937bab588544fe4121502a00eb8b52df5
        app.quarkus.io/build-timestamp: 2022-08-01 - 04:39:33 +0000
      labels:
        app.kubernetes.io/version: 1.0-SNAPSHOT
        app.kubernetes.io/name: atomic-fruit-service
        app.kubernetes.io/part-of: fruit-service-app
        department: fruity-dept
        app.openshift.io/runtime: quarkus
    spec:
      containers:
        - command:
            - java
            - -jar
            - /deployments/quarkus-run.jar
          image: ifjolla/atomic-fruit-service:1.0-SNAPSHOT
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: atomic-fruit-service
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - atomic-fruit-service
        from:
          kind: ImageStreamTag
          name: atomic-fruit-service:1.0-SNAPSHOT
      type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.openshift.io/connects-to: postgresql-db
    app.quarkus/id: "42"
    foo: bar
    app.quarkus.io/commit-id: cd443b1937bab588544fe4121502a00eb8b52df5
    app.quarkus.io/build-timestamp: 2022-08-01 - 04:39:33 +0000
  labels:
    app.kubernetes.io/name: atomic-fruit-service
    app.kubernetes.io/part-of: fruit-service-app
    app.kubernetes.io/version: 1.0-SNAPSHOT
    department: fruity-dept
    app.openshift.io/runtime: quarkus
  name: atomic-fruit-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: atomic-fruit-service
